<resources>
    <string name="app_name">Colplay</string>
    <string name="image">Image</string>
    <string name="button">Button</string>
    <string name="colplay">Colplay</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="random_color">Random Color</string>
    <string name="color">Color</string>
    <string name="colouring">Colouring</string>
    <string name="random">Random</string>
</resources>
