<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_welcom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".Start" >

    <ImageView
        android:id="@+id/start_anim"
        android:layout_width="229dp"
        android:layout_height="217dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/image"
        android:repeatCount="infinite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_name"
        app:srcCompat="@drawable/col" />

    <TextView
        android:id="@+id/start_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/colplay"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="56sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_start"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_welcom"
        android:contentDescription="@string/button"
        android:fontFamily="monospace"
        android:text="@string/start"
        android:textAlignment="center"
        android:textColor="@color/text_color_grey"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_anim" />
</androidx.constraintlayout.widget.ConstraintLayout>