<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".Menu">

    <ImageView
        android:id="@+id/menu_info"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/image"
        android:tint="@color/text_color_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/info" />

    <Button
        android:id="@+id/menu_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_welcom"
        android:contentDescription="@string/button"
        android:fontFamily="monospace"
        android:text="@string/exit"
        android:textAlignment="center"
        android:textColor="@color/text_color_grey"
        android:textSize="16sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_random_color" />

    <Button
        android:id="@+id/menu_random_color"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_welcom"
        android:contentDescription="@string/button"
        android:text="@string/random_color"
        android:textAlignment="center"
        android:textColor="@color/text_color_grey"
        android:textSize="16sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_colouring" />

    <Button
        android:id="@+id/button_colouring"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_welcom"
        android:contentDescription="@string/button"
        android:fontFamily="monospace"
        android:text="@string/colouring"
        android:textAlignment="center"
        android:textColor="@color/text_color_grey"
        android:textSize="16sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_anim" />

    <ImageView
        android:id="@+id/menu_anim"
        android:layout_width="108dp"
        android:layout_height="119dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/col" />
</androidx.constraintlayout.widget.ConstraintLayout>